# inky-slideshow

./: .gitignore  README.md  inky-slideshow-display.service  inky-slideshow-web.service  inky-slideshow.service  package-lock.json  package.json  pyproject.toml  scratch_icons.py  scratch_layout_test.py  tailwind.config.js
admin/: server.js
admin/public/: admin.css
admin/src/: input.css
scripts/: install.sh
src/inky_slideshow/: admin.py  photo_tool.py  render_weather.py  slideshow.py
tests/: test_slideshow.py
