[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inky-slideshow"
dynamic = ["version"]
description = 'slideshow of images for inky impression (PIM 773)'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "say4n", email = "github@sayan.page" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "Flask>=2.0",
  "inky",
  "loguru",
  "Pillow",
  "Werkzeug",
]

[project.urls]
Documentation = "https://github.com/say4n/inky-slideshow#readme"
Issues = "https://github.com/say4n/inky-slideshow/issues"
Source = "https://github.com/say4n/inky-slideshow"

[tool.hatch.version]
path = "src/inky_slideshow/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/inky_slideshow tests}"

[tool.hatch.envs.default]
dependencies = [
  "inky",
  "click",
  "loguru",
  "Flask>=2.0",
  "Pillow",
  "pytest",
]

[tool.hatch.envs.default.scripts]
slideshow = "python src/inky_slideshow/slideshow.py {args:/home/sayan/images}"

[tool.hatch.envs.test]
installer = "uv"
skip-install = true
dependencies = [
  "click",
  "Flask>=2.0",
  "loguru",
  "Pillow",
  "pytest",
]

[tool.hatch.envs.test.env-vars]
PYTHONPATH = "src"

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"

[tool.coverage.run]
source_pkgs = ["inky_slideshow", "tests"]
branch = true
parallel = true
omit = [
  "src/inky_slideshow/__about__.py",
]

[tool.coverage.paths]
inky_slideshow = ["src/inky_slideshow"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inky_slideshow"]
